cors2 :: 수정